--- a/B21 Ex04 Shahar 311359566 Nadav 31217377/Ex04.Menus.Test/Ex04.Menus.Test.csproj
+++ b/B21 Ex04 Shahar 311359566 Nadav 31217377/Ex04.Menus.Test/Ex04.Menus.Test.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ex04.Menus.Delegates\Ex04.Menus.Delegates.csproj" />
+    <ProjectReference Include="..\Ex04.Menus.Interfaces\Ex04.Menus.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
